progress percentage fix on course edit upload pic and vid

--- a/views/admin-lte/profiles/editAccountModal.ejs
+++ b/views/admin-lte/profiles/editAccountModal.ejs
@@ -101,7 +101,7 @@
                                         <!-- Button -->
                                         <div class="controls">
                                             <button class="btn btn-md btn-primary">Save</button>
-                                            <button type="button" class="btn btn-md btn-primary"
+                                            <button type="button" class="btn btn-md btn-warning"
                                                     data-dismiss="modal" aria-label="Close"
                                                     ng-click="cancel()">
                                                 <span aria-hidden="true">Cancel</span>
