--- a/views/admin-lte/links/links.ejs
+++ b/views/admin-lte/links/links.ejs
@@ -28,7 +28,7 @@
                         <br class="clear">
                         <span class="posted-at">
                             Posted <strong>{{bookmark.link.dateAdded | relativeDate}}</strong>
-                            By <strong>{{bookmark.createdBy.username}}</strong>
+                            By <strong>{{bookmark.createdBy.displayName}}</strong>
                         </span>
                     </li>
                 </ul>
