--- a/views/admin-lte/catalogs/courseDetailContentMap.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentMap.ejs
@@ -35,6 +35,11 @@
                 <a class="cursor" data-toggle="modal" data-target="#editSubTopicModal"
                    ng-click="setMode('edit', 'subTopic', data)"><i class="ionicons ion-edit"></i> Edit</a>
             </li>
+            <li>
+                <a class="cursor" ng-show="data.createdBy==user._id"
+                   ng-click="deleteNode(data)"><i class="ionicons ion-close"></i> Delete</a>
+            </li>
+
         </ul>
 
         <!-- contentnode menu-->
