--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -86,11 +86,11 @@
                     <h4>Comments</h4>
 
                     <div class="row">
-
-                        <div class="controls ">
-                            <div class="col-xs-2">Sort by:</div>
-                            <div class="col-xs-5 nopadding">
+                      <div class="col-md-6"><input id="searchInput" placeholder="Search..." class="col-md-12" ng-model="rawSearchTerm"></input></div>
+                        <div class="controls col-md-6">
+                            <div class="nopadding">
                                 <select id="orderTypeSelect"
+                                        placeholder = "bla"
                                         ng-model="orderType"
                                         ng-init="orderType = orderType || orderingOptions[0]"
                                         ng-options="item as item.name for item in orderingOptions"
@@ -98,14 +98,13 @@
                                 </select>
                             </div>
                         </div>
-
+                    </div>
+                    <div>
+                      <label id="activeFilterLabel" ng-bind="activeFilterString"></label>
+                      <button class="btn btn-white btn-link" ng-click="removeActiveFilters();" style="color:black;">X</button>
                     </div>
                     <div id="commentList" class="row">
-                        Search: <input id="searchInput" ng-model="rawSearchTerm"></input>
-                        <div>
-                          <label id="activeFilterLabel" ng-bind="activeFilterString"></label>
-                          <button class="btn btn-white btn-link" ng-click="removeActiveFilters();" style="color:black;">X</button>
-                        </div>
+
                         <div class="replies" ng-repeat="comment in comments" ng-cloak>
                             <div class="col-xs-1">
                                 <voting vote-type="slideComment" vote-type-id="{{comment._id}}"></voting>
