--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -25,7 +25,9 @@
                             <div class="control-group">
                                     <div id="rawText" name="rawText"
                                          ng-model="comment.rawText"
-                                         quill type="pdf-comment">
+                                         quill
+                                         type="pdf-comment"
+                                         annotation-zone-action="annotationZoneAction()">
                                     </div>
                             </div>
 
