some more style changes for slideviewer

--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -16,7 +16,12 @@
 }
 input#searchInput{
   height: 34px;
-  margin-top: 5px;
+  margin-top: 10px;
+}
+
+#replyAnno.replyControl{
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 #tagErrorList{
