--- a/views/admin-lte/catalogs/nodeDetailModal.ejs
+++ b/views/admin-lte/catalogs/nodeDetailModal.ejs
@@ -23,3 +23,17 @@
         <div ng-include="'/course/editContentNode'"></div>
     </div>
 </div>
+
+<!-- TODO: revisit and decide on usefulness
+<div class="row">
+    <div class="modal" id="editCommentModal" tabindex="-1" role="dialog"
+         aria-labelledby="comment edit view" aria-hidden="true">
+        <div>
+          <label>
+            Enter your new comment:
+          </label>
+
+        </div>
+
+    </div>
+</div>-->
