--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -32,6 +32,42 @@ input#searchInput{
   float:left;
 }
 
+.filter-header{
+  font-size: 9pt;
+  font-weight: bold;
+  color: #545454;
+}
+.filter-tag{
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
+  background-color: #B4CDCD;
+  padding: 2px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.filter-tag:hover{
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
+  background-color: #B4CDCD !important;
+
+}
+.filter-tag:active{
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
+  background-color: #B4CDCD !important;
+
+}
+.filter-tag:focus{
+  font-size: 9pt;
+  font-weight: bold;
+  color: #fff;
+  background-color: #B4CDCD !important;
+}
+
+
 #tagErrorList{
   font-size: 9pt;
   font-weight: bold;
