--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -111,19 +111,19 @@
 
             <div class="commentZoneList">
 
-                    <div>
+                    <!--<div>
                       <label id="activeFilterLabel" ng-bind="activeFilterString"></label>
                       <button class="btn btn-white btn-link" ng-click="removeActiveFilters();" style="color:black;">X</button>
-                    </div>
+                    </div>-->
                     <div id="commentList" class="row">
-                        <!--<div class="filter-wrapper col-xs-1">
+                        <div class="filter-wrapper col-xs-1">
                           <span class="filter-header">Filter:</span>
                         </div>
                         <div class="col-xs-11">
-                          <button type="button" class="btn btn-default btn-xs filter-tag">
-                            <span class="glyphicon glyphicon-remove " aria-hidden="true"></span> Star
+                          <button type="button" class="btn btn-default btn-xs filter-tag" ng-hide="((key == 'pdfId')||(key == 'pdfPageNumber')) " ng-repeat="(key,filter) in filtersRaw" ng-click="removeFilterRawField(key)">
+                            <span class="glyphicon glyphicon-remove " aria-hidden="true" ></span> {{ (key == 'author') ? filter : "#"+filter.regex_hash }}
                           </button>
-                        </div>-->
+                        </div>
 
                         <div class="replies" ng-repeat="comment in comments" ng-cloak>
                             <div class="col-xs-11">
