finished filter rework for silde viewer

--- a/public/slide-viewer/css/slideviewer.css
+++ b/public/slide-viewer/css/slideviewer.css
@@ -45,6 +45,7 @@ input#searchInput{
   padding: 2px;
   padding-left: 5px;
   padding-right: 5px;
+  margin: 2px;
 }
 .filter-tag:hover{
   font-size: 9pt;
