Added feature to add references when editing comments

--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -1,6 +1,6 @@
 <div class="row">
 
-    <div class="col-xs-11" ng-controller="CommentListController">
+    <div id="commentController" class="col-xs-11" ng-controller="CommentListController">
 
         <div class="slide-container col-sm-8 col-md-8">
             <div id="viewerWrapper">
