--- a/views/admin-lte/catalogs/courseDetailContentMap.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentMap.ejs
@@ -36,6 +36,7 @@
             <li class="separator"></li>
             <li>
                 <a class="cursor" data-toggle="modal" data-target="#editSubTopicModal"
+                   ng-show="data.createdBy==user._id"
                    ng-click="setMode('edit', 'subTopic', data)"><i class="ionicons ion-edit"></i> Edit</a>
             </li>
             <li>
