--- a/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="/jquery-ui/themes/black-tie/jquery-ui.css">
 <div class="col-xs-12 col-md-8">
-    <div class="container ng-cloak" ng-show="!isVideoExist && !isPdfExist">
-        There is no resources here.
+    <div class="container" ng-show="!isVideoExist && !isPdfExist">
+        <!--There is no resources here.-->
     </div>
     <div class="container" ng-show="isVideoExist">
         <section>
