hide update tab

--- a/views/admin-lte/catalogs/courseDetailLeftTab.ejs
+++ b/views/admin-lte/catalogs/courseDetailLeftTab.ejs
@@ -12,12 +12,12 @@
                 >
             <i class="ionicons ion-map"></i>
             <span>CourseMap</span></a></li>
-    <li ng-show="enrolled || isOwner">
+    <!--<li ng-show="enrolled || isOwner">
         <a href="#/cid/{{course._id}}?tab=updates" ng-show="user"
            data-toggle="tab" data-target="#updates"
                 >
             <i class="ionicons ion-ios-time-outline"></i><br>
-            <span>Updates</span></a></li>
+            <span>Updates</span></a></li>-->
     <li ng-show="enrolled || isOwner">
         <a href="#/cid/{{course._id}}?tab=discussion" ng-show="user"
            data-toggle="tab" data-target="#discussion"
