--- a/views/admin-lte/catalogs/nodeDetailLeftTab.ejs
+++ b/views/admin-lte/catalogs/nodeDetailLeftTab.ejs
@@ -17,11 +17,11 @@
             <i class="ionicons ion-link"></i>
             <span>Links</span></a></li>
 
-    <li ng-show="enrolled || isOwner">
+    <!--<li ng-show="enrolled || isOwner">
         <a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab=updates" ng-show="user"
            data-toggle="tab" data-target="#updates">
             <i class="ionicons ion-ios-time-outline"></i><br>
-            <span>Updates</span></a></li>
+            <span>Updates</span></a></li>-->
 
     <li ng-show="enrolled || isOwner">
         <a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab=analytics" ng-show="user"
