Some more adjustment in angular for replies

--- a/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPdf.ejs
@@ -138,7 +138,7 @@
                                          show-delete-button="true"
                                          delete-action="deleteCommentById(comment.id)"
                                          show-edit-button="true"
-                                         edit-action="changeEditMode(comment._id, true);setRawText(comment._id,comment.html);"
+                                         edit-action="changeEditMode(comment._id, true);setEditRawText(comment._id,comment.html);"
                                          author-clickable="true"
                                          author-click-action="authorLabelClick(comment.author)"
                                          ng-hide="editMode == comment._id"
