fix wrong username to correct one

--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -13,7 +13,7 @@
 
                 By
                 <strong>
-                    {{user.displayName}}
+                    {{course.createdBy.displayName}}
                 </strong>
 
                 <h1>
