--- a/views/admin-lte/mainMenu.ejs
+++ b/views/admin-lte/mainMenu.ejs
@@ -65,7 +65,7 @@
 
 
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 hidden-xs">
-            <form class="navbar-form" role="search">
+            <!--<form class="navbar-form" role="search">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search" name="q">
 
@@ -74,7 +74,7 @@
                         </button>
                     </div>
                 </div>
-            </form>
+            </form>-->
         </div>
     </nav>
 
