Widget Add enrolled users widget in course-analytics tab

--- a/views/course-analytics/enrolled-users.ejs
+++ b/views/course-analytics/enrolled-users.ejs
@@ -3,10 +3,10 @@
         <tbody>
         <tr>
             <th style="width:10px;">Nr.</th>
-            <th>{{title}}</th>
+            <th>{{HeaderTitle}}</th>
         </tr>
         <tr ng-repeat="user in userList">
-            <td>{{$index+1}}</td>
+            <td>{{$index+1}}.</td>
             <td>{{user.user.username}}</td>
         </tr>
         </tbody>
