--- a/public/video-annotations/styles/styles.css
+++ b/public/video-annotations/styles/styles.css
@@ -10,7 +10,7 @@
 .inline-va-annotation {
     position: absolute !important;
     display: table;
-    background: rgba(0, 0, 0, 0.2);;
+    background: rgba(0, 0, 0, 0.2);
     color: #FFFFFF;
 }
 
