--- a/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentPreview.ejs
@@ -1,12 +1,6 @@
 <link rel="stylesheet" type="text/css" href="/jquery-ui/themes/black-tie/jquery-ui.css">
-<div class="col-xs-12 col-md-8">
-    <div class="container" ng-show="!isVideoExist && !isPdfExist">
-        <!--There is no resources here.-->
-    </div>
-    <div class="container" ng-show="isVideoExist">
-        <section>
-            <va-widget video-source="{{videoFile.link}}"
-                       video-id="{{videoFile._id}}"></va-widget>
-        </section>
+<div class="container-fluid">
+    <div ng-show="isVideoExist">
+        <va-widget video-source="{{videoFile.link}}" video-id="{{videoFile._id}}"></va-widget>
     </div>
 </div>
